# Trabalho-serializer

./: README.md  manage.py  pyproject.toml
order/: factory.py
order/models/: order.py
order/serializers/: order_serializers.py
order/test_viewset/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py  urls.py
product/: factory.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewset/: __init__.py  category_viewset.py  product_viewset.py  urls.py
trabalho/: asgi.py  settings.py  urls.py  wsgi.py
